# rust_challenges_solving

./: Cargo.toml  README.md
src/: backwards_read_primes.rs  main.rs  multiplication_table_for_number.rs  sum_of_cubes.rs  sum_of_digits_digital_root.rs  who_likes_it.rs
