[package]
name = "challenges-rs"
version = "0.1.0"
authors = ["Awiteb <Awiteb@hotmail.com>"]

license = "MIT"
repository = "https://github.com/TheAwiteb/challenges.rs"
description = "Challenges I solve from codewars in Rust"
edition = "2018"

default-run = "main"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.2.2"
regex = "1.5.4"
term-table = "1.3.2"
